tests/sumo/extended/vaporizer/errors/end_empty/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'end' in definition of a vaporizer is empty.
Quitting (on error).
